--- a/app/src/main/res/layout-land/fragment_player.xml
+++ b/app/src/main/res/layout-land/fragment_player.xml
@@ -33,6 +33,7 @@
             android:layout_weight="0.3" />
 
         <android.support.constraint.ConstraintLayout
+            android:id="@+id/chatContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="0.7">
